manifests/customerA-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-a
spec: {}
status: {}
