manifests/customerB-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-b
  labels:
    tier: premium
    backend: openai-customer-b
