manifests/httproute-a2a-new-agent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2a-route-new-agent
  namespace: kgateway-system
  labels:
    app: agentgateway
  annotations:
    agentgateway.dev/a2a: "true"
spec:
  parentRefs:
    - name: agentgateway
      sectionName: http
  rules:
    # Route for New Agent
    - matches:
        - path:
            type: PathPrefix
            value: /a2a/customer-a/new-agent
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api/a2a/customer-a/new-agent/
      backendRefs:
        - name: kagent-a2a-new-agent-backend
          namespace: kgateway-system
          group: gateway.kgateway.dev
          kind: Backend
          port: 8083
    
    # Route for Orchestrator New Agent
    - matches:
        - path:
            type: PathPrefix
            value: /a2a/customer-a/orchestrator-new-agent
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api/a2a/customer-a/orchestrator-new-agent/
      backendRefs:
        - name: kagent-a2a-new-agent-backend
          namespace: kgateway-system
          group: gateway.kgateway.dev
          kind: Backend
          port: 8083
